cmake_minimum_required(VERSION 2.8)

project(dht C)

FILE(GLOB dht_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
FILE(GLOB dht_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

ADD_LIBRARY(
  dht
  ${dht_SRCS}
  )

find_library(LIBCRYPT_LIB NAMES crypt)
target_link_libraries(dht ${LIBCRYPT_LIB})

SET_TARGET_PROPERTIES(
  dht PROPERTIES
  PUBLIC_HEADER "${dht_HEADERS}"
  VERSION 0.24
  SOVERSION 0
  )

INCLUDE(GNUInstallDirs)
INSTALL(
  TARGETS dht
  EXPORT DhtLibraryDepends
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib # .so
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib # .a
  PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}" COMPONENT dev
  )
INSTALL(
  EXPORT DhtLibraryDepends
  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/dht"
  )
